tested, fixed font-size promble with directly modify boostrap style, fixed input must has label promble with add a label but display:none avoidoverflowing the screen

--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@ html{
 }
 body{
     font-family: DFHeiMedium-B5, 微軟正黑體!important;
-    font-size: 140%;
+    font-size: 128%;
 }
 main{
     width: max-content;
@@ -109,3 +109,6 @@ aside{
     display: none;
 }
 /* @media */
+.none{
+    display: none;
+}
